@@ -99,15 +99,15 @@ class Sort:
         first = self.database.get_person_from_handle(first_id)
         second = self.database.get_person_from_handle(second_id)
 
-        birth_handle1 = first.get_birth_handle()
-        if birth_handle1:
-            date1 = self.database.get_event_from_handle(birth_handle1).get_date_object()
+        birth_ref1 = first.get_birth_ref()
+        if birth_ref1:
+            date1 = self.database.get_event_from_handle(birth_ref1.ref).get_date_object()
         else:
             date1 = Date()
 
-        birth_handle2 = second.get_birth_handle()
-        if birth_handle2:
-            date2 = self.database.get_event_from_handle(birth_handle2).get_date_object()
+        birth_ref2 = second.get_birth_ref()
+        if birth_ref2:
+            date2 = self.database.get_event_from_handle(birth_ref2.ref).get_date_object()
         else:
             date2 = Date()
 
